--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <style>
+    html, body{
+        overflow-x:hidden;}
     *{
     color: rgb(77, 48, 77);}
     .photo {
