--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 </head>
 <style>
     html, body{
-        overflow-x:hidden;}
+        overflow-x:hidden;
+    }
     *{
     color: rgb(77, 48, 77);}
     .photo {
         border-radius: 300px;
+        align-self: auto;
     }
     .iam{
         padding-top: 250px;
@@ -26,7 +28,7 @@
 
     .maintext {
         font-family: monospace;
-        font-size: 70px;
+        font-size: 60px;
     }
 
     .subtext,.exp,.aboutme {
@@ -41,7 +43,8 @@
     }
     .home{
         background-color: black;
-        padding: 50px;
+        padding-top: 50px;
+        padding-bottom:50px;
     }
     span{
     color:rgb(224, 218, 218);
@@ -128,7 +131,7 @@
 
         </nav>
     <div class="row home">
-        <div class="col-12  col-md-6"><img id="home" class="photo" src="me.jpg" align="right" width="450px" height="400px"></div>
+        <div class="col-12  col-md-6"><img id="home" class="photo" src="me.jpg" align="right" width="390px" height="385px"></div>
         <div class="col-12  col-md-6" align="center">
             <h3 class="iam">I am</h3>
             <h1 class="maintext">Hudha Machingal</h1>
