--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
     .hoho:hover{
         color:rgb(208, 205, 205);
     }
+    span.navbar-toggler-icon{
+        background-color:rgba(77, 48, 77, 0.739);
+    }
     
 
 </style>
