--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         color:rgb(208, 205, 205);
     }
     span.navbar-toggler-icon{
-        background-color:rgba(77, 48, 77, 0.739);
+       border:2px dotted rgb(77,48,77);
     }
     
 
