--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <img src="hijab.jpeg" alt="logo" width="90" height="70">
       </nav>
     <div class="row home">
-        <div class="col-6  col-md-6" align="center"><img id="home" class="photo" src="me.jpg"  width="370px" height="570px"></div>
+        <div class="col-6  col-md-6" align="center"><img id="home" class="photo" src="Mee.jpg"  width="370px" height="570px"></div>
         <div class="col-6  col-md-6" align="left">
             <h3 class="iam">I am</h3>
             <h1 class="maintext">Hudha<p class="mt">MACHINGAL</p></h1>
