--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         border:2px dotted rgb(189, 185, 185);
         width:150px;
         height:20px;
+        margin-left:30px;
     }
     .purple{
         background-color: rgb(77, 48, 77);
@@ -114,8 +115,7 @@
         height:100%;
     }
     .eduu{
-        display:flex;
-        justify-content: space-between;
+    
     }
     #Contact{
         text-align: center;
@@ -215,6 +215,12 @@
         padding-left:10px;
         font-weight: bold;
     }
+    .ins{
+        color:rgb(118, 116, 116);
+        font-size:13px;
+        padding-left:20px;
+        font-family:monospace;
+    }
 
     
 
@@ -265,7 +271,10 @@
     <div id="Education">
         <h3 id="education">Education</h3><br><br><br>
         <div class="eduu">
-       <p class="exp"><3 Passed Grade 10 with 95%<br><3 Passed Grade 12 with 91%<br><3 Studying web designing through mulearn<br><3 Currently Pursuing BCA in Safi institute of advanced study</p><img src="book.jpg" width="150" height="100"></div>
+       <p class="exp">-Grade 10</p><p class="ins">-Al Alia International Indian School,Riyadh,Saudi Arabia<br>-CBSC 95%</p>
+       <p class="exp">-Grade 12</p><p class="ins">-Al Alia International Indian School,Riyadh,Saudi Arabia<br>-CBSC 91%</p> 
+       <p class="exp">-Pursuing Bca</p><p class="ins">-Safi Institute of advanced Study,Vazhayoor</p>
+       </div>
        <div class="load"><div class="purple"></div></div>
     </div>
     <div id="Projects" align="center">
