--- a/index.html
+++ b/index.html
@@ -221,6 +221,14 @@
         padding-left:20px;
         font-family:monospace;
     }
+    .lin{
+        text-decoration: none;
+        color:rgb(190, 187, 187);
+    }
+    .flx{
+        display:flex;
+        justify-content: space-between;
+    }
 
     
 
@@ -270,11 +278,11 @@
     </div>
     <div id="Education">
         <h3 id="education">Education</h3><br><br><br>
-        <div class="eduu">
+        <div class="flx"><div class="eduu">
        <p class="exp">-Grade 10</p><p class="ins">-Al Alia International Indian School,Riyadh,Saudi Arabia<br>-CBSC 95%</p>
        <p class="exp">-Grade 12</p><p class="ins">-Al Alia International Indian School,Riyadh,Saudi Arabia<br>-CBSC 91%</p> 
        <p class="exp">-Pursuing Bca</p><p class="ins">-Safi Institute of advanced Study,Vazhayoor</p>
-       </div>
+       </div><img src="book.jpg" width="170" height="170"></div>
        <div class="load"><div class="purple"></div></div>
     </div>
     <div id="Projects" align="center">
@@ -292,12 +300,12 @@
     </div>
     <div id="Contact">
         <h1 id="contact">Contact</h1><br><br><br>
-        <p class="exp">E-mail:whothemacc@gmail.com</p>
-        <p class="exp">Phone:9037597723</p><br><br><br>
+        <p class="exp">Email: <a class=lin href="mailto: whothemacc@gmail.com">whothemacc@gmail.com</a></p>
+        <p class="exp lin">Phone: 9037597723</p><br><br><br>
         <div class="links">
-            <a href="https://instagram.com/whothe_mac?igshid=cTEwYW41cm45cGNp&utm_source=qr"><img src="instagram.png" width="50px" height="50px"></a>
+            <a href="https://instagram.com/whothe_mac?igshid=cTEwYW41cm45cGNp&utm_source=qr"><img src="inst.png" width="50px" height="50px"></a>
             <a href="https://github.com/whoTheMac"><img src="github.png" width="50px" height="50px"></a>
-            <a href="https://twitter.com/Hudha162416"><img src="twitter.png" width="50px" height="50px"></a>
+            <a href="https://twitter.com/Hudha162416"><img src="twitt.png" width="50px" height="50px"></a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
